feat: display upload speed and time left

--- a/assets/index.css
+++ b/assets/index.css
@@ -93,6 +93,11 @@ body {
   display: none;
 }
 
+.upload-status span {
+  width: 70px;
+  display: inline-block;
+}
+
 .main {
   padding: 0 1em;
 }
