--- a/assets/index.css
+++ b/assets/index.css
@@ -1,7 +1,12 @@
 html {
-  font-family: -apple-system,BlinkMacSystemFont,Helvetica,Arial,sans-serif;
+  font-family: -apple-system,BlinkMacSystemFont,Roboto,Helvetica,Arial,sans-serif;
   line-height: 1.5;
   color: #24292e;
+}
+
+body {
+  /* prevent premature breadcrumb wrapping on mobile */
+  min-width: 500px;
 }
 
 .hidden {
@@ -47,6 +52,11 @@ html {
 .toolbox {
   display: flex;
   margin-right: 10px;
+}
+
+.toolbox > div {
+  /* vertically align with breadcrumb text */
+  height: 1.1rem;
 }
 
 .searchbar {
@@ -143,7 +153,6 @@ html {
   padding-left: 0.6em;
 }
 
-
 .path svg {
   height: 100%;
   fill: rgba(3,47,98,0.5);
@@ -163,7 +172,7 @@ html {
   display: block;
   text-decoration: none;
   max-width: calc(100vw - 375px);
-  min-width: 400px;
+  min-width: 200px;
 }
 
 .path a:hover {
@@ -200,7 +209,8 @@ html {
   }
 
   svg,
-  .path svg {
+  .path svg,
+  .breadcrumb svg {
     fill: #fff;
   }
 
