--- a/assets/index.css
+++ b/assets/index.css
@@ -149,7 +149,7 @@ body {
 }
 
 .path svg {
-  height: 100%;
+  height: 16px;
   fill: rgba(3,47,98,0.5);
   padding-right: 0.5em;
   vertical-align: text-top;
