refactor: ui change the cursor for upload-btn to a pointer

--- a/assets/index.css
+++ b/assets/index.css
@@ -73,6 +73,10 @@ body {
   display: none;
 }
 
+.upload-file label {
+  cursor: pointer;
+}
+
 .searchbar {
   display: flex;
   flex-wrap: nowrap;
