moved inline-styling to css

--- a/assets/index.css
+++ b/assets/index.css
@@ -4,6 +4,10 @@ html {
   color: #24292e;
 }
 
+#index-data {
+  display: none !important;
+}
+
 body {
   /* prevent premature breadcrumb wrapping on mobile */
   min-width: 538px;
@@ -229,8 +233,8 @@ body {
 }
 
 .user-btn {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .user-name {
